--- a/kubernetes/apps/home/homeassistant/ks.yaml
+++ b/kubernetes/apps/home/homeassistant/ks.yaml
@@ -22,6 +22,7 @@ spec:
   postBuild:
     substitute:
       APP: *app
+      CNPG_CAPACITY: 10Gi
       VOLSYNC_CAPACITY: 20Gi
   prune: true 
   retryInterval: 1m
