--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
   - ./bazarr/ks.yaml
   - ./huntarr/ks.yaml
   - ./jellyfin/ks.yaml
+  - ./jellyseerr/ks.yaml
   - ./music-assistant/ks.yaml
   - ./overseerr/ks.yaml
   - ./prowlarr/ks.yaml
