feat: Promote Jellyseerr to Request site

--- a/kubernetes/apps/media/jellyseerr/app/helmrelease.yaml
+++ b/kubernetes/apps/media/jellyseerr/app/helmrelease.yaml
@@ -70,7 +70,7 @@ spec:
         enabled: true
         className: "ingress-nginx"
         hosts:
-          - host: jellyseerr.noms.tv
+          - host: request.noms.tv
             paths:
               - path: /
                 service:
