--- a/kubernetes/apps/media/sonarr/kids/helmrelease.yaml
+++ b/kubernetes/apps/media/sonarr/kids/helmrelease.yaml
@@ -74,7 +74,7 @@ spec:
           http:
             port: *port
     ingress:
-      *app :
+      app:
         enabled: true
         className: "ingress-nginx"
         hosts:
