--- a/kubernetes/apps/media/recyclarr/app/resources/recyclarr.yml
+++ b/kubernetes/apps/media/recyclarr/app/resources/recyclarr.yml
@@ -21,5 +21,9 @@ sonarr:
           - name: WEB-1080p
     media_naming:
       series: plex-tvdb
+      season: default
       episodes:
         rename: true
+        standard: default
+        daily: default
+        anime: default
