--- a/kubernetes/apps/media/recyclarr/app/resources/recyclarr.yml
+++ b/kubernetes/apps/media/recyclarr/app/resources/recyclarr.yml
@@ -24,3 +24,6 @@ sonarr:
       season: default
       episodes:
         rename: true
+        standard: default
+        daily: default
+        anime: default
