--- a/kubernetes/apps/network/kustomization.yaml
+++ b/kubernetes/apps/network/kustomization.yaml
@@ -12,5 +12,6 @@ resources:
   - ./certificates/ks.yaml
   - ./cloudflare-ddns/ks.yaml
   - ./cloudflare-tunnel/ks.yaml
+  - ./envoy-gateway/ks.yaml
   - ./unifi-dns/ks.yaml
   - ./lancache/ks.yaml
