--- a/kubernetes/apps/media/sonarr/kids/helmrelease.yaml
+++ b/kubernetes/apps/media/sonarr/kids/helmrelease.yaml
@@ -78,8 +78,8 @@ spec:
         hostnames:
           - "{{ .Release.Name }}.noms.tv"
         parentRefs:
-          - name: internal
-            namespace: kube-system
+          - name: envoy
+            namespace: network
             sectionName: https
     persistence:
       config:
