test: Move Authentik to Envoy

--- a/kubernetes/apps/authentication/authentik/app/externalsecret.yaml
+++ b/kubernetes/apps/authentication/authentik/app/externalsecret.yaml
@@ -33,18 +33,18 @@ spec:
                     timeout: 30
                     from: "{{ .emailFrom }}"
             server:
-              ingress:
-                  ingressClassName: ingress-nginx
-                  enabled: true
-                  hosts: ["{{ .hostname }}"]
-              # route:
-              #   main:
+              # ingress:
+              #     ingressClassName: ingress-nginx
               #     enabled: true
-              #     hostnames: ["{{ .hostname }}"]
-              #     parentRefs:
-              #       - name: internal
-              #         namespace: kube-system
-              #         sectionName: https
+              #     hosts: ["{{ .hostname }}"]
+              route:
+                main:
+                  enabled: true
+                  hostnames: ["{{ .hostname }}"]
+                  parentRefs:
+                    - name: envoy
+                      namespace: network
+                      sectionName: https
             postgresql:
                 enabled: false
             redis:
