--- a/kubernetes/apps/default/immich/app/helm/values.yaml
+++ b/kubernetes/apps/default/immich/app/helm/values.yaml
@@ -66,15 +66,7 @@ redis:
 server:
   ingress:
     main:
-      enabled: true
-      className: "ingress-nginx"
-      annotations:
-        nginx.ingress.kubernetes.io/proxy-body-size: "0"
-      hosts:
-        - host: photos.noms.tv
-          paths:
-            - path: /
-              pathType: Prefix
+      enabled: false
   resources:
     limits:
       gpu.intel.com/i915: 1000m
