--- a/kubernetes/apps/default/immich/app/httproute.yaml
+++ b/kubernetes/apps/default/immich/app/httproute.yaml
@@ -5,8 +5,8 @@ metadata:
 spec:
   hostnames: ["photos.noms.tv"]
   parentRefs:
-    - name: internal
-      namespace: kube-system
+    - name: envoy
+      namespace: network
       sectionName: https
   rules:
     - matches:
