--- a/kubernetes/apps/home/tasmoadmin/app/helmrelease.yaml
+++ b/kubernetes/apps/home/tasmoadmin/app/helmrelease.yaml
@@ -42,7 +42,6 @@ spec:
                 memory: 512Mi
     service:
       main:
-        controller: *app
         ports:
           http:
             port: *port
@@ -50,13 +49,9 @@ spec:
       app:
         hostnames: ["tasmoadmin.noms.tv"]
         parentRefs:
-          - name: internal
-            namespace: kube-system
+          - name: envoy
+            namespace: network
             sectionName: https
-        rules:
-          - backendRefs:
-              - name: *app
-                port: *port
     persistence:
       data:
         existingClaim: *app
