--- a/kubernetes/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/grafana/app/helmrelease.yaml
@@ -257,8 +257,8 @@ spec:
         enabled: true
         hostnames: ["{{ .Release.Name }}.noms.tv"]
         parentRefs:
-          - name: internal
-            namespace: kube-system
+          - name: envoy
+            namespace: network
             sectionName: https
     persistence:
       enabled: false
