--- a/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/app/helmrelease.yaml
@@ -71,8 +71,8 @@ spec:
           enabled: true
           hostnames: ["prometheus.noms.tv"]
           parentRefs:
-            - name: internal
-              namespace: kube-system
+            - name: envoy
+              namespace: network
               sectionName: https
       prometheusSpec:
         image:
