--- a/kubernetes/apps/default/paperless/app/helmrelease.yaml
+++ b/kubernetes/apps/default/paperless/app/helmrelease.yaml
@@ -46,22 +46,18 @@ spec:
 
     service:
       main:
-        controller: *app
         ports:
           http:
             port: *port
 
-    ingress:
-      main:
-        enabled: true
-        className: "ingress-nginx"
-        hosts:
-          - host: archive.noms.tv
-            paths:
-              - path: /
-                service:
-                  identifier: main
-                  port: http
+    route:
+      *app :
+        hostnames:
+          - "archive.noms.tv"
+        parentRefs:
+          - name: envoy
+            namespace: network
+            sectionName: https
 
     persistence:
       config:
