--- a/kubernetes/apps/default/actual-budget/app/helmrelease.yaml
+++ b/kubernetes/apps/default/actual-budget/app/helmrelease.yaml
@@ -55,32 +55,16 @@ spec:
         fsGroupChangePolicy: OnRootMismatch
     service:
       main:
-        controller: *app
         ports:
           http:
             port: *port
-    ingress:
+    route:
       *app :
-        enabled: true
-        className: "ingress-nginx"
-        hosts:
-          - host: budget.noms.tv
-            paths:
-              - path: /
-                service:
-                  identifier: main
-                  port: http
-    # route:
-    #   app:
-    #     hostnames: ["budget.noms.tv"]
-    #     parentRefs:
-    #       - name: internal
-    #         namespace: kube-system
-    #         sectionName: https
-    #     rules:
-    #       - backendRefs:
-    #           - name: *app
-    #             port: *port
+        hostnames: ["budget.noms.tv"]
+        parentRefs:
+          - name: envoy
+            namespace: network
+            sectionName: https
     persistence:
       data:
         existingClaim: *app
