--- a/kubernetes/apps/default/spoolman/app/helmrelease.yaml
+++ b/kubernetes/apps/default/spoolman/app/helmrelease.yaml
@@ -66,7 +66,7 @@ spec:
           http:
             port: *port
     route:
-      app:
+      *app :
         hostnames: ["filament.noms.tv"]
         parentRefs:
           - name: envoy
