--- a/kubernetes/apps/default/wallos/app/helmrelease.yaml
+++ b/kubernetes/apps/default/wallos/app/helmrelease.yaml
@@ -43,34 +43,18 @@ spec:
                 cpu: 10m
               limits:
                 memory: 512Mi
-    ingress:
-      *app :
-        enabled: true
-        className: "ingress-nginx"
-        hosts:
-          - host: subscriptions.noms.tv
-            paths:
-              - path: /
-                service:
-                  identifier: main
-                  port: http
     service:
       main:
-        controller: *app
         ports:
           http:
             port: *port
-    # route:
-    #   app:
-    #     hostnames: ["mealie.noms.tv"]
-    #     parentRefs:
-    #       - name: internal
-    #         namespace: kube-system
-    #         sectionName: https
-    #     rules:
-    #       - backendRefs:
-    #           - name: *app
-    #             port: *port
+    route:
+      *app :
+        hostnames: ["subscriptions.noms.tv"]
+        parentRefs:
+          - name: envoy
+            namespace: network
+            sectionName: https
     persistence:
       config:
         existingClaim: *app
