--- a/kubernetes/apps/home/zwave-js-ui/app/helmrelease.yaml
+++ b/kubernetes/apps/home/zwave-js-ui/app/helmrelease.yaml
@@ -77,17 +77,14 @@ spec:
                 service:
                   identifier: main
                   port: http
-    # route:
-    #   app:
-    #     hostnames: ["zwave.noms.tv"]
-    #     parentRefs:
-    #       - name: internal
-    #         namespace: kube-system
-    #         sectionName: https
-    #     rules:
-    #       - backendRefs:
-    #           - name: *app
-    #             port: *port
+    route:
+      app:
+        hostnames:
+          - "zwave.noms.tv"
+        parentRefs:
+          - name: envoy
+            namespace: network
+            sectionName: https
     persistence:
       config:
         existingClaim: *app
