chore: More Gateway Migration cleanup

--- a/kubernetes/apps/flux-system/flux-instance/app/httproute.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/app/httproute.yaml
@@ -7,8 +7,8 @@ metadata:
 spec:
   hostnames: ["flux-webhook.noms.tv"]
   parentRefs:
-    - name: internal
-      namespace: kube-system
+    - name: envoy
+      namespace: network
       sectionName: https
   rules:
     - backendRefs:
