--- a/kubernetes/apps/databases/pgadmin/app/helmrelease.yaml
+++ b/kubernetes/apps/databases/pgadmin/app/helmrelease.yaml
@@ -22,7 +22,7 @@ spec:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
-          main:
+          app:
             image:
               repository: dpage/pgadmin4
               tag: 9.7.0@sha256:5929bac24d91b5d7219686c8d66a703cd5851a498620bca4f5e4263873b015c0 # Do not use 9.5 until https://github.com/pgadmin-org/pgadmin4/issues/8914 is fixed
@@ -45,13 +45,14 @@ spec:
               limits:
                 memory: 512Mi
     service:
-      main:
+      app:
         ports:
           http:
             port: *port
     route:
       app:
-        hostnames: ["pgadmin.noms.tv"]
+        hostnames:
+          - "{{ .Release.Name }}.noms.tv"
         parentRefs:
           - name: envoy
             namespace: network
