chore: More Migration Cleanup

--- a/kubernetes/apps/home/homeassistant/old/helmrelease.yaml
+++ b/kubernetes/apps/home/homeassistant/old/helmrelease.yaml
@@ -64,7 +64,7 @@ spec:
           http:
             port: *code-port
     route:
-      *app :
+      main:
         hostnames: ["old-hass.noms.tv"]
         parentRefs:
           - name: envoy
