--- a/kubernetes/apps/media/tautulli/app/helmrelease.yaml
+++ b/kubernetes/apps/media/tautulli/app/helmrelease.yaml
@@ -64,7 +64,7 @@ spec:
           http:
             port: *port
     route:
-      *app :
+      main:
         hostnames:
           - "{{ .Release.Name }}.noms.tv"
         parentRefs:
