fix: Old Homeassistant Code port

--- a/kubernetes/apps/home/homeassistant/old/helmrelease.yaml
+++ b/kubernetes/apps/home/homeassistant/old/helmrelease.yaml
@@ -51,6 +51,17 @@ spec:
               "--port", "12321",
               "/config"
             ]
+            probes:
+              liveness: &code-probes
+                enabled: true
+                custom: true
+                spec:
+                  tcpSocket:
+                    port: &code-port 12321
+                  failureThreshold: 6
+                  periodSeconds: 10
+              readiness: *code-probes
+              startup: *code-probes
             resources:
               limits:
                 memory: 512Mi
