--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -18,4 +18,4 @@ resources:
   - ./radicale/ks.yaml
   - ./spoolman/ks.yaml
   - ./wallos/ks.yaml
-  # - ./wikijs/ks.yaml ##TODO: Fix Me
+  - ./wikijs/ks.yaml
