--- a/kubernetes/apps/default/wikijs/app/externalSecret.yaml
+++ b/kubernetes/apps/default/wikijs/app/externalSecret.yaml
@@ -3,42 +3,22 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: wikijs-env
+  name: wikijs
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: wikijs-env
+    name: wikijs
     template:
       engineVersion: v2
       data:
         DB_TYPE: postgres
-        DB_HOST: cnpg-cluster-rw.databases.svc.cluster.local
+        DB_HOST: wikijs-db-rw
         DB_PORT: "5432"
-        DB_PASS: "{{ .databasePassword }}" 
-        DB_NAME: wikijs
-        DB_USER: wikijs
+        DB_PASS: "{{ .appPassword }}" 
+        DB_NAME: "{{ .appDB }}"
+        DB_USER: "{{ .appUser }}"
   dataFrom:
     - extract:
-        key: wikijs
----
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/external-secrets.io/externalsecret_v1beta1.json
-apiVersion: external-secrets.io/v1
-kind: ExternalSecret
-metadata:
-  name: wikijs-db-secrets
-spec:
-  secretStoreRef:
-    kind: ClusterSecretStore
-    name: onepassword
-  target:
-    name: wikijs-db-secrets
-    template:
-      engineVersion: v2
-      data:
-        username: app
-        password: "{{ .databasePassword }}"
-  dataFrom:
-    - extract:
-        key: wikijs
+        key: cloudnative-pg
