--- a/kubernetes/apps/default/linkwarden/app/helmrelease.yaml
+++ b/kubernetes/apps/default/linkwarden/app/helmrelease.yaml
@@ -22,7 +22,7 @@ spec:
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
-          main:
+          app:
             image:
               repository: ghcr.io/linkwarden/linkwarden
               tag: v2.12.2@sha256:c1c6f417ea566de2c2dac6e79353ee5f40cb6a44fd9dd3970c83e6fc098de1df
@@ -49,20 +49,21 @@ spec:
               limits:
                 memory: 8Gi
     service:
-      main:
+      app:
         ports:
           http:
             port: *port
     route:
-      *app :
-        hostnames: ["bookmarks.noms.tv"]
+      app:
+        hostnames:
+          - "bookmarks.noms.tv"
         parentRefs:
           - name: envoy
             namespace: network
             sectionName: https
     persistence:
       data:
-        existingClaim: *app
+        existingClaim: linkwarden
         globalMounts:
           - path: /data/data
             subPath: data
