--- a/kubernetes/apps/default/paperless/tika/helmrelease.yaml
+++ b/kubernetes/apps/default/paperless/tika/helmrelease.yaml
@@ -20,7 +20,7 @@ spec:
     controllers:
       *app :
         containers:
-          main:
+          app:
             image:
               repository: ghcr.io/paperless-ngx/tika
               tag: 2.9.1-minimal
@@ -39,7 +39,7 @@ spec:
               limits:
                 memory: 1Gi
     service:
-      main:
+      app:
         ports:
           http:
             port: *port
