--- a/kubernetes/apps/default/wikijs/app/helmrelease.yaml
+++ b/kubernetes/apps/default/wikijs/app/helmrelease.yaml
@@ -3,28 +3,20 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: wikijs
+  name: &app wikijs
 spec:
   interval: 30m
-  chart:
-    spec:
-      chart: app-template
-      version: 3.5.1
-      interval: 30m
-      sourceRef:
-        kind: HelmRepository
-        name: bjw-s
-        namespace: flux-system
-
+  chartRef:
+    kind: OCIRepository
+    name: app-template
+  install:
+    remediation:
+      retries: -1
+  upgrade:
+    cleanupOnFail: true
+    remediation:
+      retries: 3
   values:
-    defaultPodOptions:
-      securityContext:
-        runAsNonRoot: true
-        runAsUser: 1000
-        runAsGroup: 1000
-        fsGroup: 1000
-        fsGroupChangePolicy: OnRootMismatch
-        seccompProfile: { type: RuntimeDefault }
     controllers:
       wikijs:
         annotations:
@@ -39,32 +31,41 @@ spec:
                 value: America/New_York
             envFrom:
               - secretRef:
-                  name: wikijs-env
+                  name: *app
             probes:
-              liveness: &app-probes
+              liveness: &probes
                 enabled: true
                 custom: true
                 spec:
                   tcpSocket:
-                    port: &app-port 3000
+                    port: &port 3000
                   failureThreshold: 6
                   periodSeconds: 10
-              readiness: *app-probes
-              startup: *app-probes
+              readiness: *probes
+              startup: *probes
             resources:
               requests:
                 cpu: 47m
                 memory: 256Mi
               limits:
                 memory: 1Gi
+    defaultPodOptions:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000
+        runAsGroup: 1000
+        fsGroup: 1000
+        fsGroupChangePolicy: OnRootMismatch
+        seccompProfile: { type: RuntimeDefault }
     service:
-      main:
+      app:
         ports:
           http:
             port: *port
     route:
       app:
-        hostnames: ["wiki.noms.tv"]
+        hostnames:
+          - "wiki.noms.tv"
         parentRefs:
           - name: envoy
             namespace: network
